--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ nodeenv==1.7.0
 outcome==1.2.0
 packaging==21.3
 pathspec==0.10.1
-Pillow==9.2.0
+# Pillow==9.2.0
 platformdirs==2.5.2
 pre-commit==2.20.0
 psycopg2==2.9.3
@@ -59,7 +59,7 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.4
-PyYAML==6.0
+# PyYAML==6.0
 requests==2.28.1
 selenium==4.5.0
 six==1.16.0
