--- a/.github/workflows/Unit_Tests.yml
+++ b/.github/workflows/Unit_Tests.yml
@@ -14,13 +14,16 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ["3.10"]
+         
+      # Add your other steps here
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v3       
       with:
         python-version: ${{ matrix.python-version }}
+        node-version: '20'
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
