--- a/.github/workflows/Unit_Tests.yml
+++ b/.github/workflows/Unit_Tests.yml
@@ -23,7 +23,12 @@ jobs:
       uses: actions/setup-python@v3       
       with:
         python-version: ${{ matrix.python-version }}
+        
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
         node-version: '20'
+          
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
